src/objects/Guest_table_rating_details__x.object
<CustomObject>
    <description>Guest_table_rating_details</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_table_rating_dtl</externalName>
    <fields>
        <fullName>c_company__c</fullName>
        <label>Company</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c_entered_by__c</fullName>
        <label>Entered by</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_speed__c</fullName>
        <label>Game speed</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pit_num__c</fullName>
        <label>Pit number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_game_cd__c</fullName>
        <label>Property game code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rate_type__c</fullName>
        <label>Rate type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rated_by__c</fullName>
        <label>Rated by</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_shift__c</fullName>
        <label>Shift</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_table_num__c</fullName>
        <label>Table number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest Table Rating Details</relationshipLabel>
        <relationshipName>Guest_table_rating_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_rating_date__c</fullName>
        <label>Rating date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rating_end_time__c</fullName>
        <externalDeveloperName>d_rating_end_time</externalDeveloperName>
        <label>Rating End Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rating_start_time__c</fullName>
        <externalDeveloperName>d_rating_start_time</externalDeveloperName>
        <label>Rating Start Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_seq_rating_start_time__c</fullName>
        <externalDeveloperName>d_seq_rating_start_time</externalDeveloperName>
        <label>Seq Rating Start Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_trans_date__c</fullName>
        <label>Trans date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_trans_time__c</fullName>
        <externalDeveloperName>d_trans_time</externalDeveloperName>
        <label>Trans TIme</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_1__c</fullName>
        <label>Average bet 1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_2__c</fullName>
        <label>Average bet 2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_avg_bet_3__c</fullName>
        <label>Average bet 3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_buy_in__c</fullName>
        <label>Buy in</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash__c</fullName>
        <label>Cash</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_out__c</fullName>
        <label>Cash out</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_comp_worth__c</fullName>
        <label>Comp worth</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_countercheck__c</fullName>
        <label>Countercheck</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_handle__c</fullName>
        <label>Handle</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hands_played__c</fullName>
        <label>Hands played</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_win__c</fullName>
        <label>Theoretical win</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_dmid__c</fullName>
        <label>winedId</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_countercheck_cnt__c</fullName>
        <label>Countercheck counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_minutes_played__c</fullName>
        <label>Minutes played</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rating_hyd__c</fullName>
        <label>Rating hyd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rating_num__c</fullName>
        <label>Rating number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trans_hyd__c</fullName>
        <label>Trans hyd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Guest Table Rating Detail</label>
    <pluralLabel>Guest Table Rating Details</pluralLabel>
</CustomObject>